k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: educacion-backend-service
  namespace: default
spec:
  selector:
    app: educacion-backend-app
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 4000
  type: ClusterIP
