k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: educacion-backend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: unmsm-alb-ingress
spec:
  rules:
    - host: educacionback.unmsm.edu.pe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: educacion-backend-service
                port:
                  name: http
